--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
+  "name": "tropical-nerf-threejs",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "stats.js": "^0.17.0",
     "three": "^0.163.0"
   },
   "devDependencies": {
     "vite": "^5.2.8"
-  }
+  },
+  "deploy": "gh-pages -d dist"
 }
