--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
+    "mathjax": "^3.2.2",
     "stats.js": "^0.17.0",
     "three": "^0.163.0"
   },
